// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Multi Input As Form Item 1`] = `
<div
  style="height:310px"
>
  
    
  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="formItemMultiInput"
    >
      
        Multi Input as form item
    
    </label>
    
    
    <div
      class="fd-popover"
    >
      
        
      <div
        aria-controls="F4GcX348a"
        aria-expanded="true"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
            
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                
          <div
            class="fd-tokenizer"
          >
            
                    
            <div
              class="fd-tokenizer__inner"
            >
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Apple
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: apple"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Orange
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: orange"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Kiwi
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: kiwi"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Banana
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: banana"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <input
                class="fd-input fd-input-group__input fd-tokenizer__input"
                id="formItemMultiInput"
              />
              
                    
            </div>
            
                
          </div>
          
                
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                    
            <button
              aria-controls="F4GcX348a"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="show options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--value-help"
              />
              
                    
            </button>
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX348a"
      >
        
        
        <div
          class="fd-popover__wrapper"
        >
          
            
          <ul
            aria-label="list of fruits"
            aria-multiselectable="true"
            class="fd-list fd-list--multi-input"
            role="listbox"
          >
            
				
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg30"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez620"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4e20"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg30"
              >
                Apple
              </span>
              
				
            </li>
            

				
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg31"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez621"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez621"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg31"
              >
                Orange
              </span>
              
				
            </li>
            
				
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg32"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez622"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez622"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg32"
              >
                Banana
              </span>
              
				
            </li>
            
				
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg33"
                  class="fd-checkbox"
                  id="Ai4ez623"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez623"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg33"
              >
                Kiwi
              </span>
              
				
            </li>
            
				
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
					
              <div
                class="fd-form-item fd-list__form-item"
              >
                
						
                <input
                  aria-labelledby="Az0bg34"
                  class="fd-checkbox"
                  id="Ai4ez624"
                  type="checkbox"
                />
                
						
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez624"
                  tabindex="-1"
                />
                
					
              </div>
              
					
              <span
                class="fd-list__title"
                id="Az0bg34"
              >
                Lemon
              </span>
              
				
            </li>
            
            
          </ul>
          
        
        </div>
        
        
      </div>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi Input Cozy And Compact 1`] = `
<div
  style="display:flex;height:310px"
>
  
    
  <div
    style="display:flex;flex-direction:column;padding-right:1rem"
  >
    
        
    <label
      class="fd-form-label"
      for="cozyMultiInput"
    >
      
            Multi Input Cozy Mode
        
    </label>
    
        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX348a"
        aria-expanded="true"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <div
            class="fd-tokenizer"
          >
            
                        
            <div
              class="fd-tokenizer__inner"
            >
              
                            
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Apple
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: apple"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Orange
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: orange"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Kiwi
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: kiwi"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Banana
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: banana"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <input
                class="fd-input fd-input-group__input fd-tokenizer__input"
                id="cozyMultiInput"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                        
            <button
              aria-controls="F4GcX348a"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="show options"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                            
              <i
                class="sap-icon--value-help"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX348a"
      >
        
            
        <div
          class="fd-popover__wrapper"
        >
          
                
          <ul
            aria-label="list of fruits"
            aria-multiselectable="true"
            class="fd-list fd-list--multi-input"
            role="listbox"
          >
            
					
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg2"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez611"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez611"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg2"
              >
                Apple
              </span>
              
					
            </li>
            

					
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg21"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez612"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez12"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg21"
              >
                Orange
              </span>
              
					
            </li>
            
					
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg22"
                  checked=""
                  class="fd-checkbox"
                  id="Ai4ez6s13"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez6s13"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg22"
              >
                Banana
              </span>
              
					
            </li>
            
					
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg23"
                  class="fd-checkbox"
                  id="Ai4ez614"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez614"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg23"
              >
                Kiwi
              </span>
              
					
            </li>
            
					
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg24"
                  class="fd-checkbox"
                  id="Ai4ez615"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez615"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg24"
              >
                Lemon
              </span>
              
					
            </li>
            
                
          </ul>
          
            
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    style="display:flex;flex-direction:column"
  >
    
        
    <label
      class="fd-form-label"
      for="compactMultiInput"
    >
      
            Multi Input Compact Mode
        
    </label>
    

        
    <div
      class="fd-popover"
    >
      
            
      <div
        aria-controls="F4GcX34a"
        aria-expanded="true"
        aria-haspopup="true"
        class="fd-popover__control"
      >
        
                
        <div
          class="fd-input-group fd-input-group--control"
        >
          
                    
          <div
            class="fd-tokenizer fd-tokenizer--compact"
          >
            
                        
            <div
              class="fd-tokenizer__inner"
            >
              
                            
              <span
                class="fd-token fd-token--compact"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Apple
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: apple"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <span
                class="fd-token fd-token--compact"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Orange
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: orange"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <span
                class="fd-token fd-token--compact"
                role="button"
                tabindex="0"
              >
                
                                
                <span
                  class="fd-token__text"
                >
                  
                                    Banana
                                
                </span>
                
                                
                <button
                  aria-label="unselect option: banana"
                  class="fd-token__close"
                />
                
                            
              </span>
              
                            
              <input
                class="fd-input fd-input-group__input fd-input--compact fd-tokenizer__input"
                id="compactMultiInput"
              />
              
                        
            </div>
            
                    
          </div>
          
                    
          <span
            class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
          >
            
                        
            <button
              aria-controls="F4GcX34a"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="show options"
              class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
            >
              
                            
              <i
                class="sap-icon--value-help"
              />
              
                        
            </button>
            
                    
          </span>
          
                
        </div>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX34a"
      >
        
            
        <div
          class="fd-popover__wrapper"
        >
          
                
          <ul
            aria-label="list of fruits"
            aria-multiselectable="true"
            class="fd-list fd-list--multi-input fd-list--compact"
            role="listbox"
          >
            
                   	
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg25"
                  checked=""
                  class="fd-checkbox fd-checkbox--compact"
                  id="Ai4ez616"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez616"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg25"
              >
                Apple
              </span>
              
					
            </li>
            

					
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg26"
                  checked=""
                  class="fd-checkbox fd-checkbox--compact"
                  id="Ai4ez617"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez617"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg26"
              >
                Orange
              </span>
              
					
            </li>
            
					
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg2a"
                  checked=""
                  class="fd-checkbox fd-checkbox--compact"
                  id="Ai4ez61a3"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez61a3"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg2a"
              >
                Banana
              </span>
              
					
            </li>
            
					
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg27"
                  class="fd-checkbox fd-checkbox--compact"
                  id="Ai4ez618"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez618"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg27"
              >
                Kiwi
              </span>
              
					
            </li>
            
					
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
						
              <div
                class="fd-form-item fd-list__form-item"
              >
                
							
                <input
                  aria-labelledby="Az0bg28"
                  class="fd-checkbox fd-checkbox--compact"
                  id="Ai4ez619"
                  type="checkbox"
                />
                
							
                <label
                  class="fd-checkbox__label"
                  for="Ai4ez619"
                  tabindex="-1"
                />
                
						
              </div>
              
						
              <span
                class="fd-list__title"
                id="Az0bg28"
              >
                Lemon
              </span>
              
					
            </li>
            
                
          </ul>
          
            
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi Input Filtering 1`] = `
<div
  style="min-height: 250px;"
>
  

  <label
    class="fd-form-label"
    for="filteringMultiInput"
  >
    
    Filtered Fruits

  </label>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4GcX348aB"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Banana
                            
              </span>
              
                            
              <button
                aria-label="unselect option: banana"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <input
              class="fd-input fd-input-group__input fd-tokenizer__input"
              id="filteringMultiInput"
              value="A"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4GcX348aB"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="show options"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--value-help"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4GcX348aB"
    >
      
            
      <ul
        aria-label="list of fruits"
        aria-multiselectable="true"
        class="fd-list fd-list--multi-input"
        role="listbox"
      >
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg59"
              checked=""
              class="fd-checkbox"
              id="Ai4ez651"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez651"
              tabindex="-1"
            />
            
                    
          </div>
          
                
          <span
            class="fd-list__title"
            id="Az0bg59"
          >
            <b>
              A
            </b>
            pple
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
                
        </li>
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg60"
              checked=""
              class="fd-checkbox"
              id="Ai4ez652"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez652"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg60"
          >
            Or
            <b>
              a
            </b>
            nge
          </span>
          
                    
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
                
        </li>
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg61"
              checked=""
              class="fd-checkbox"
              id="Ai4ez653"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez653"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg61"
          >
            B
            <b>
              a
            </b>
            nana
          </span>
          
                    
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg62"
              class="fd-checkbox"
              id="Ai4ez654"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez654"
              tabindex="-1"
            />
            
                    
          </div>
          
                
          <span
            class="fd-list__title"
            id="Az0bg62"
          >
            <b>
              A
            </b>
            pple
          </span>
          
                
          <span
            class="fd-list__secondary"
          >
            A1
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg63"
              class="fd-checkbox"
              id="Ai4ez655"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez655"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg63"
          >
            Or
            <b>
              a
            </b>
            nge
          </span>
          
                    
          <span
            class="fd-list__secondary"
          >
            A2
          </span>
          
                
        </li>
        
                
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg64"
              class="fd-checkbox"
              id="Ai4ez656"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez656"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg64"
          >
            B
            <b>
              a
            </b>
            nana
          </span>
          
                    
          <span
            class="fd-list__secondary"
          >
            A3
          </span>
          
                
        </li>
        
            
      </ul>
      
            
      <span
        class="fd-list__footer"
      >
        
            
        <a
          class="fd-link"
          role="button"
          tabindex="0"
        >
          Show All
        </a>
        
            
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi Input Grouping 1`] = `
<div
  style="height:450px"
>
  
    
  <label
    class="fd-form-label"
    for="fruitsAndVegsMultiInput"
  >
    
    Fruits and Vegetables
    
  </label>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4H8X34a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Kiwi
                            
              </span>
              
                            
              <button
                aria-label="unselect option: kiwi"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-tokenizer__indicator"
            >
              2 more
            </span>
             
                        
            <input
              class="fd-input fd-input-group__input fd-tokenizer__input"
              id="fruitsAndVegsMultiInput"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4H8X34a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="show options"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--value-help"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4H8X34a"
    >
      
        
      <div
        class="fd-popover__wrapper"
      >
        
            
        <h3
          class="fd-list__group-header"
          id="fruitListHeader"
        >
          
                
          <span
            class="fd-list__title"
          >
            Fruits
          </span>
          
            
        </h3>
        
            
        <ul
          aria-labelledby="fruitListHeader"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
               
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg35"
                checked=""
                class="fd-checkbox"
                id="Ai4ez625"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez625"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg35"
            >
              Apple
            </span>
            
				
          </li>
          

				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg36"
                checked=""
                class="fd-checkbox"
                id="Ai4ez626"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez626"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg36"
            >
              Orange
            </span>
            
				
          </li>
          
				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg37"
                checked=""
                class="fd-checkbox"
                id="Ai4ez627"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez627"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg37"
            >
              Banana
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg38"
                class="fd-checkbox"
                id="Ai4ez628"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez628"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg38"
            >
              Kiwi
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg39"
                class="fd-checkbox"
                id="Ai4ez629"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez629"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg39"
            >
              Lemon
            </span>
            
				
          </li>
          
            
        </ul>
        
            
        <label
          class="fd-list__group-header"
          id="selectMultipleVegsLabel"
        >
          
                
          <span
            class="fd-list__title"
          >
            Vegetables
          </span>
          
            
        </label>
        
            
        <ul
          aria-labelledby="selectMultipleVegsLabel"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
 				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg40"
                checked=""
                class="fd-checkbox"
                id="Ai4ez630"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez630"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg40"
            >
              Onion
            </span>
            
				
          </li>
          

				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg41"
                checked=""
                class="fd-checkbox"
                id="Ai4ez631"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez632"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg41"
            >
              Tomato
            </span>
            
				
          </li>
          
            
        </ul>
        
        
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi Input Match Popover Body Size 1`] = `
<div
  style="height:270px"
>
  
    
  <label
    class="fd-form-label"
    for="matchPopoverBodySizeMultiInput"
  >
    
    Fruits
    
  </label>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4HGFHX34a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Kiwi
                            
              </span>
              
                            
              <button
                aria-label="unselect option: kiwi"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-tokenizer__indicator"
            >
              2 more
            </span>
             
                        
            <input
              class="fd-input fd-input-group__input fd-tokenizer__input"
              id="matchPopoverBodySizeMultiInput"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4HGFHX34a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="show options"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--value-help"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="F4HGFHX34a"
    >
      
        
      <div
        class="fd-popover__wrapper"
      >
        
            
        <ul
          aria-label="list of fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
        		
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg42"
                checked=""
                class="fd-checkbox"
                id="Ai4ez633"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez633"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg42"
            >
              Apple
            </span>
            
				
          </li>
          

				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg43"
                checked=""
                class="fd-checkbox"
                id="Ai4ez634"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez634"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg43"
            >
              Orange
            </span>
            
				
          </li>
          
				
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg44"
                checked=""
                class="fd-checkbox"
                id="Ai4ez635"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez635"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg44"
            >
              Banana
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg45"
                class="fd-checkbox"
                id="Ai4ez636"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez636"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg45"
            >
              Kiwi
            </span>
            
				
          </li>
          
				
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
					
            <div
              class="fd-form-item fd-list__form-item"
            >
              
						
              <input
                aria-labelledby="Az0bg46"
                class="fd-checkbox"
                id="Ai4ez637"
                type="checkbox"
              />
              
						
              <label
                class="fd-checkbox__label"
                for="Ai4ez637"
                tabindex="-1"
              />
              
					
            </div>
            
					
            <span
              class="fd-list__title"
              id="Az0bg46"
            >
              Lemon
            </span>
            
				
          </li>
          
            
        </ul>
        
        
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi Input Mobile Mode 1`] = `
<section
  aria-labelledby="mobileModeMultiInputHeader"
  class="fd-dialog fd-dialog-docs-static fd-select-docs-max-height fd-dialog--active"
  id="select-dialog-example"
  role="dialog"
>
  
    
  <div
    class="fd-dialog__content"
  >
    
        
    <header
      class="fd-dialog__header fd-bar fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <h3
            class="fd-title fd-title--h5"
            id="mobileModeMultiInputHeader"
          >
            
                        Select Ingredient
                    
          </h3>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="close"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--decline"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </header>
    
        
    <div
      class="fd-dialog__subheader fd-bar fd-bar--cozy fd-bar--subheader"
    >
      
            
      <div
        class="fd-bar__middle"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <div
            class="fd-input-group"
          >
            
                        
            <div
              class="fd-tokenizer"
            >
              
                             
              <div
                class="fd-tokenizer__inner"
              >
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Apple
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: apple"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Orange
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: orange"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Kiwi
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: kiwi"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-tokenizer__indicator"
                >
                  4 more
                </span>
                 
                                 
                <input
                  aria-labelledby="mobileModeMultiInputHeader"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
                             
              </div>
              
                         
            </div>
            
                        
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
                            
              <button
                aria-label="show options"
                class="fd-input-group__button fd-button fd-button--transparent"
              >
                
                                
                <i
                  class="sap-icon--value-help"
                />
                
                            
              </button>
              
                        
            </span>
            
                    
          </div>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="select all"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--multiselect-all"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dialog__body fd-dialog__body--no-vertical-padding"
    >
      
            
      <span
        class="fd-list__message fd-list__message--success"
      >
        Success Message
      </span>
      
             
      <ul
        aria-label="list of fruits"
        aria-multiselectable="true"
        class="fd-list fd-list--multi-input fd-list--has-message fd-list--mobile"
        role="listbox"
      >
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg57"
              checked=""
              class="fd-checkbox"
              id="Ai4ez648"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez648"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg57"
          >
            Apple
          </span>
          
                
        </li>
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg58"
              checked=""
              class="fd-checkbox"
              id="Ai4ez649"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez649"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg58"
          >
            Orange
          </span>
          
                
        </li>
        
                
        <li
          aria-selected="true"
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                    
          <div
            class="fd-form-item fd-list__form-item"
          >
            
                        
            <input
              aria-labelledby="Az0bg59"
              checked=""
              class="fd-checkbox"
              id="Ai4ez650"
              type="checkbox"
            />
            
                        
            <label
              class="fd-checkbox__label"
              for="Ai4ez650"
              tabindex="-1"
            />
            
                    
          </div>
          
                    
          <span
            class="fd-list__title"
            id="Az0bg59"
          >
            Banana
          </span>
          
                
        </li>
        
             
      </ul>
      
        
    </div>
    
       
    <footer
      class="fd-dialog__footer fd-bar fd-bar--cozy fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized fd-dialog__decisive-button"
          >
            OK
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </footer>
    
    
  </div>
</section>
`;

exports[`Storyshots Patterns/Multi Input Read Only And Disabled 1`] = `
<div
  style="display:flex;height:250px;margin-top:1em;"
>
  
    
  <div>
    
        
    <div
      style="margin-bottom:1em;"
    >
      
            
      <div>
        
                
        <label
          class="fd-form-label"
          for="disabledMultiInput"
        >
          
                    Latin Words (Disabled)
                
        </label>
        
                
        <div
          class="fd-popover"
          style="display:flex;flex-direction:column"
        >
          
                    
          <div
            aria-disabled="true"
            aria-expanded="false"
            aria-haspopup="true"
            class="fd-popover__control"
            disabled=""
          >
            
                        
            <div
              aria-disabled="true"
              class="fd-input-group fd-input-group--control"
              disabled=""
            >
              
                            
              <div
                class="fd-tokenizer"
              >
                
                                
                <div
                  class="fd-tokenizer__inner"
                >
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    role="button"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Bibendum
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    role="button"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Lorem
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    role="button"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Dolor
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    role="button"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Filter
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Lorem
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-tokenizer__indicator"
                  >
                    
                                        
                    <div
                      class="fd-popover"
                    >
                      
                                            
                      <div
                        aria-controls="F4GcX34Xa"
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="fd-popover__control fd-input-group__control"
                        onclick="onPopoverClick('F4GcX34Xa');"
                      >
                        
                                                
                        <a
                          class="fd-link"
                        >
                          
                                                    2 more
                                                
                        </a>
                        
                                            
                      </div>
                      
                                            
                      <div
                        aria-hidden="true"
                        class="fd-popover__body"
                        id="F4GcX34Xa"
                      >
                        
                                                
                        <nav
                          class="fd-menu"
                          id=""
                        >
                          
                                                    
                          <ul
                            class="fd-menu__list fd-menu__list--no-shadow"
                          >
                            
                                                        
                            <li
                              class="fd-menu__item"
                            >
                              
                                                            
                              <a
                                class="fd-menu__link"
                                href="#"
                                tabindex="-1"
                              >
                                
                                                                
                                <span
                                  class="fd-menu__title"
                                >
                                  Consectetur
                                </span>
                                
                                                            
                              </a>
                              
                                                        
                            </li>
                            
                                                        
                            <li
                              class="fd-menu__item"
                            >
                              
                                                            
                              <a
                                class="fd-menu__link"
                                href="#"
                                tabindex="-1"
                              >
                                
                                                                
                                <span
                                  class="fd-menu__title"
                                >
                                  Adipiscing
                                </span>
                                
                                                            
                              </a>
                              
                                                        
                            </li>
                            
                                                    
                          </ul>
                          
                                                
                        </nav>
                        
                                            
                      </div>
                      
                                        
                    </div>
                    
                                    
                  </span>
                  
                                    
                  <input
                    class="fd-input fd-input-group__input fd-tokenizer__input"
                    disabled=""
                    id="disabledMultiInput"
                  />
                  
                                
                </div>
                
                            
              </div>
              
                            
              <span
                class="fd-input-group__addon fd-input-group__addon--button"
              >
                
                                
                <button
                  aria-label="show options"
                  class="fd-input-group__button fd-button fd-button--transparent"
                  tabindex="-1"
                >
                  
                                    
                  <i
                    class="sap-icon--value-help"
                  />
                  
                                
                </button>
                
                            
              </span>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div>
      
            
      <div>
        
                
        <label
          class="fd-form-label"
          for="readOnlyMultiInput"
        >
          
                    Latin Words (Readonly)
                
        </label>
        
                
        <div
          class="fd-popover"
          style="display:flex;flex-direction:column;padding-right:1rem"
        >
          
                    
          <div
            aria-controls="F4GcX3X8a"
            aria-expanded="false"
            aria-haspopup="false"
            class="fd-popover__control"
          >
            
                        
            <div
              aria-readonly="true"
              class="fd-input-group fd-input-group--control"
              readonly=""
            >
              
                            
              <div
                class="fd-tokenizer fd-tokenizer--readonly"
              >
                
                                
                <div
                  class="fd-tokenizer__inner"
                >
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    tabindex="0"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Bibendum
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    tabindex="0"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Lorem
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    tabindex="0"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Dolor
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    tabindex="0"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Filter
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-token fd-token--readonly"
                    tabindex="0"
                  >
                    
                                        
                    <span
                      class="fd-token__text"
                    >
                      
                                            Lorem
                                        
                    </span>
                    
                                    
                  </span>
                  
                                    
                  <span
                    class="fd-tokenizer__indicator"
                  >
                    
                                        
                    <div
                      class="fd-popover"
                    >
                      
                                            
                      <div
                        aria-controls="F4GF5348a"
                        aria-expanded="true"
                        aria-haspopup="true"
                        class="fd-popover__control fd-input-group__control"
                        onclick="onPopoverClick('F4GF5348a');"
                      >
                        
                                                
                        <a
                          class="fd-link"
                          tabindex="0"
                        >
                          
                                                    2 more
                                                
                        </a>
                        
                                            
                      </div>
                      
                                            
                      <div
                        aria-hidden="false"
                        class="fd-popover__body"
                        id="F4GF5348a"
                      >
                        
                                                
                        <nav
                          aria-label="more options"
                          class="fd-menu"
                          id=""
                        >
                          
                                                    
                          <ul
                            class="fd-menu__list fd-menu__list--no-shadow"
                          >
                            
                                                        
                            <li
                              class="fd-menu__item"
                            >
                              
                                                            
                              <a
                                class="fd-menu__link"
                                href="#"
                              >
                                
                                                                
                                <span
                                  class="fd-menu__title"
                                >
                                  Consectetur
                                </span>
                                
                                                            
                              </a>
                              
                                                        
                            </li>
                            
                                                        
                            <li
                              class="fd-menu__item"
                            >
                              
                                                            
                              <a
                                class="fd-menu__link"
                                href="#"
                              >
                                
                                                                
                                <span
                                  class="fd-menu__title"
                                >
                                  Adipiscing
                                </span>
                                
                                                            
                              </a>
                              
                                                        
                            </li>
                            
                                                    
                          </ul>
                          
                                                
                        </nav>
                        
                                            
                      </div>
                      
                                        
                    </div>
                    
                                    
                  </span>
                  
                                    
                  <input
                    aria-readonly="true"
                    class="fd-input fd-input-group__input fd-tokenizer__input"
                    id="readOnlyMultiInput"
                    readonly=""
                  />
                  
                                
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi Input Semantic 1`] = `
<div
  style="height:300px"
>
  

  <label
    class="fd-form-label"
    for="semanticMultiInput"
  >
    
    Semantic Fruits

  </label>
  

  <div
    class="fd-popover"
  >
    
    
    <div
      aria-controls="F4GcKJH8a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control fd-input-group__control"
    >
      
        
      <div
        class="fd-input-group fd-input-group--control is-success"
      >
        
            
        <div
          class="fd-tokenizer"
        >
          
                 
          <div
            class="fd-tokenizer__inner"
          >
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Apple
                         
              </span>
              
                         
              <button
                aria-label="unselect option: apple"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Orange
                         
              </span>
              
                         
              <button
                aria-label="unselect option: orange"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Kiwi
                         
              </span>
              
                         
              <button
                aria-label="unselect option: kiwi"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-tokenizer__indicator"
            >
              4 more
            </span>
             
                     
            <input
              class="fd-input fd-input-group__input fd-tokenizer__input"
              id="semanticMultiInput"
            />
            
                 
          </div>
          
            
        </div>
        
            
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                
          <button
            aria-controls="F4GcKJH8a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="show options"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                    
            <i
              class="sap-icon--value-help"
            />
            
                
          </button>
          
            
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4GcKJH8a"
    >
      
      
      <div
        class="fd-popover__wrapper"
      >
        
        
        <span
          class="fd-list__message fd-list__message--success"
        >
          Success Message
        </span>
        
        
        <ul
          aria-label="list of fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input fd-list--has-message"
          role="listbox"
        >
          
			
          <li
            class="fd-list__message fd-list__message--success"
            role="option"
          >
            Success Message
          </li>
          
			
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg47"
                checked=""
                class="fd-checkbox"
                id="Ai4ez638"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez638"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg47"
            >
              Apple
            </span>
            
			
          </li>
          
			
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg48"
                checked=""
                class="fd-checkbox"
                id="Ai4ez639"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez639"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg48"
            >
              Orange
            </span>
            
			
          </li>
          
			
          <li
            aria-selected="true"
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg49"
                checked=""
                class="fd-checkbox"
                id="Ai4ez640"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez640"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg49"
            >
              Banana
            </span>
            
			
          </li>
          
			
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg50"
                class="fd-checkbox"
                id="Ai4ez641"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez641"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg50"
            >
              Kiwi
            </span>
            
			
          </li>
          
			
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
				
            <div
              class="fd-form-item fd-list__form-item"
            >
              
					
              <input
                aria-labelledby="Az0bg51"
                class="fd-checkbox"
                id="Ai4ez642"
                type="checkbox"
              />
              
					
              <label
                class="fd-checkbox__label"
                for="Ai4ez642"
                tabindex="-1"
              />
              
				
            </div>
            
				
            <span
              class="fd-list__title"
              id="Az0bg51"
            >
              Lemon
            </span>
            
			
          </li>
          
        
        </ul>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</div>
`;
